# pico-os

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Goal.dot  Goal.md  LICENSE  README.md  TODO.md  copy-to-pico.sh  cross_file.txt  meson.build  read-debug-output.sh  tasks.py
CMake/: FindTests.cmake  FindTools.cmake  pico_sdk_import.cmake
Docs/: filesystem.md
Docs/Debug/: 0001_out-of-memory.md  0002_debug-mutex-in-interrupt.md  0003_wfi-with-interrupts-disabled.md  0005_interrupts-disabled-in-dummy-thread.md  0007_allocations-in-system-handler.md  0008_interrupts-disabled.md  0009_second-syscall-fails.md  0010_refcount-of-default-thread.md  0012_blocking-default-thread.md  0013_deadlock.md  0014_lock-in-boot.md  0016_open-issues.md  0018_deadlock.md  0019_page-allocator.md  0020_assert-on-exit.md  0021_sometimes-we-hang-on-input.md  0022_fault-in-editor.md  0023_memmove-is-buggy.md
Docs/Debug/Resolved/: 0013_deadlock.md  (+17 more)
Kernel/: ABI.cpp  ABI.hpp  ConsoleDevice.cpp  ConsoleDevice.hpp  DebugDevice.hpp  DynamicLoader.cpp  DynamicLoader.hpp  File.cpp  File.hpp  FileSystem.hpp  FlashFileSystem.cpp  FlashFileSystem.hpp  Forward.hpp  GlobalMemoryAllocator.cpp  GlobalMemoryAllocator.hpp  HandlerMode.hpp  KernelMutex.cpp  KernelMutex.hpp  Loader.cpp  Loader.hpp  MPU.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  MemoryFileSystem.cpp  MemoryFileSystem.hpp  MemoryFilesystem.hpp  PageAllocator.cpp  PageAllocator.hpp  Process.cpp  Process.hpp  Result.hpp  Scheduler.cpp  Scheduler.hpp  SerialPort.hpp  StackWrapper.hpp  SystemHandler.cpp  SystemHandler.hpp  Thread.hpp  VirtualFileSystem.cpp  VirtualFileSystem.hpp  (+6 more)
Kernel/FileSystem/: DeviceFileSystem.cpp  DeviceFileSystem.hpp  FileSystem.cpp  FileSystem.hpp  FlashFileSystem.cpp  FlashFileSystem.hpp  MemoryFileSystem.cpp  MemoryFileSystem.hpp  VirtualFileSystem.cpp  VirtualFileSystem.hpp
Kernel/Interface/: System.hpp  Types.hpp  stat.h  syscalls.h  vfs.h
Kernel/Interrupt/: InterruptGuard.hpp  UART.cpp  UART.hpp
Kernel/Synchronization/: AbstractLock.hpp  HardwareSpinLock.hpp  LockGuard.hpp  MaskedInterruptGuard.hpp
Kernel/Threads/: Scheduler.cpp  Scheduler.hpp  Thread.cpp  Thread.hpp
Notes/: Debugging.md  Outline.md  Tasks.md
Notes/Issues/: 0001_invalid-checksum.md  0002_stage-not-loaded-into-ram.md  0003_gdb-boot.md  0004_run-from-reset.md  0005_gdb-does-not-clear-breakpoints.md  0007_some-instructions-are-rejected.md  0008_contants-in-different-section.md  0009_can-not-boot-with-imports.md  0010_inconsistent-backtrace.md  0011_linker-thumb-bit.md  0013_hang-in-memset.md  0014_linker-keep-sections-explicitly.md  0015_unknown-sections.md  0018_import-recursively.md  0019_singleton-static-inline.md  0020_link-with-meson.md  0021_unwanted-symbols.md  0022_uart-constructor-runs-twice.md  0023_custom-gdb-stub.md
Prototype/Boot/: boot_2_flash_second_stage.S  boot_3_high_level.cpp  build.sh  link.ld
Prototype/Checksum/: build.sh  crc32.S  main.c
Prototype/Integers/: build.sh  example.cpp  main.cpp
Prototype/Kernel/: MemoryAllocator.hpp  Scheduler.hpp  SerialDevice.hpp
Prototype/Modules/: .gitignore  build.sh  main.cpp
Scripts/: backup.sh  build.sh  checksum.py  create-filesystem.sh  debugger.sh  dmesg.sh  dynamic-loader.py  fs-embed.py  openocd.sh  picoprobe.sh
Sources/: build.sh  link.ld
Sources/Boot/: README.md  boot_1_debugger.S  boot_2_flash.S  boot_3_vectors.S  boot_4_load_kernel.cpp  meson.build
Sources/Boot/include/boot2_helpers/: read_flash_sreg.S
Sources/Kernel/: Entry.hpp  Interrupt.hpp  meson.build
Sources/Kernel/Drivers/: UartDriver.cpp  UartDriver.hpp  UartOutputDriver.cpp  UartOutputDriver.hpp
Sources/Kit/: Assertions.hpp  Forward.hpp  Singleton.hpp  Span.hpp  Traits.hpp  meson.build
Sources/boot/: README.md  boot_0_debugger_entry.S  boot_1_debugger.S  boot_1_debugger.cpp  boot_2_flash.S  boot_2_flash_second_stage.S  boot_2_flash_second_stage.cpp  boot_2_link.ld  boot_2_vectors.S  boot_3_high_level.cpp  boot_3_reset.S  boot_3_vectors.S  boot_4_load_kernel.cpp  build.sh  module.cpp
Sources/kernel/: build.sh  module.cpp
Sources/kit/: build.sh  module.cpp
Sources/std/: build.sh  module.cpp
Sources/workaround/: build.sh  module.cpp
Std/: ArmedScopeGuard.hpp  Array.hpp  Assert.cpp  Assert.hpp  CircularQueue.hpp  Concepts.hpp  Debug.hpp  Format.cpp  Format.hpp  Forward.cpp  Forward.hpp  HashMap.hpp  HashTable.hpp  Lexer.hpp  Map.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  NonnullRefPtr.hpp  Optional.hpp  OwnPtr.hpp  Path.hpp  RefPtr.hpp  Result.hpp  Set.hpp  Singleton.hpp  SortedSet.hpp  Span.hpp  String.hpp  StringBuilder.hpp  StringView.hpp  Types.hpp  Vector.hpp
Tests/: CMakeLists.txt  TestSpan.cpp  TestSuite.cpp  TestSuite.hpp  TestVector.cpp
Tests/Std/: TestArmedScopeGuard.cpp  TestCircularQueue.cpp  TestFormat.cpp  TestHashMap.cpp  TestHashTable.cpp  TestLexer.cpp  TestMap.cpp  TestMemoryAllocator.cpp  TestNonnullRefPtr.cpp  TestOptional.cpp  TestOwnPtr.cpp  TestPath.cpp  TestRefPtr.cpp  TestSet.cpp  TestSingleton.cpp  TestSortedSet.cpp  TestSpan.cpp  TestString.cpp  TestStringBuilder.cpp  TestStringView.cpp  TestVector.cpp
Tools/: .gitignore  BufferStream.hpp  CMakeLists.txt  ElfEmbed.cpp  ElfGenerator.hpp  EmbedFile.cpp  FileSystem.cpp  FileSystem.hpp  FileSystemGenerator.hpp  sdebug.c  shell-mockup.c
Tools/LibElf/: Generator.cpp  Generator.hpp  MemoryStream.cpp  MemoryStream.hpp  RelocationTable.cpp  RelocationTable.hpp  StringTable.cpp  StringTable.hpp  SymbolTable.cpp  SymbolTable.hpp
Userland/: .gitignore  CMakeLists.txt  Editor.c  EmbedHack.x  Example.c  Shell.c  Userland.x
Userland/LibC/: assert.c  assert.h  ctype.c  ctype.h  dirent.c  dirent.h  errno.c  errno.h  fcntl.c  fcntl.h  malloc.c  malloc.h  spawn.c  spawn.h  stdarg.h  stddef.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  unistd.c  unistd.h
Userland/LibC/readline/: readline.c  readline.h
Userland/LibC/sys/: abi.S  abi.c  abi.h  crt0.S  crt0.c  dirent.c  dirent.h  fcntl.c  signal.c  stat.c  stat.h  system.c  system.h  types.h  unistd.c  wait.c  wait.h
(+43 files in other folders)
